client: fix bug with strokes shifting in figure panel

--- a/server/public/stylesheets/index.styl
+++ b/server/public/stylesheets/index.styl
@@ -303,44 +303,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     .cell.selected
       outline #E0E0FF solid 1px
 
-    .textCell
-    .formulaCell
-      >.display
-        display block
-
-      >.formulaInput
-        align-items center
-        display flex
-        flex-direction row
-        padding 9px 0 9px 0
-
-        >.keyboardPanel
-
-          >textarea
-            border none
-            height 1in
-            padding 0px
-            resize none
-            width 6.5in
-
-        >.displayPanel
-          flex-grow 1
-
-        >.handlePanel
-          padding 4px 0 4px 0
-          text-align right
-          width 36px
-
-        >.prefixPanel
-          padding-left 40px
-
-        >.statusPanel
-          text-align left
-          width 36px
-
-    .figureCell
-      padding var(--svg-top-offset) 0px 0px var(--svg-left-offset)
-
   >.panel
     background #F0F0F0
     border 1px solid #808080
